--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,126 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/abcd"
-        android:gravity="center"
-        android:layout_width="0dp"
-        app:layout_constraintBottom_toTopOf="@id/sc"
-        android:layout_height="wrap_content">
-
-        <com.google.android.gms.ads.AdView
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/adView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_centerHorizontal="true"
-            ads:adSize="BANNER"
-            ads:adUnitId="@string/banner">
-        </com.google.android.gms.ads.AdView>
-
-    </LinearLayout>
-
-
-
-
-    <ScrollView
-        app:layout_constraintTop_toBottomOf="@id/abcd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/add"
-        android:id="@+id/sc"
-        android:layout_above="@id/add"
-        android:layout_below="@id/abcd"
-        android:layout_marginBottom="2dp"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:orientation="vertical">
 
 
-        <View
-            android:layout_marginTop="4dp"
-            android:background="#CCCC00"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginBottom="2dp">
-        </View>
-
-
-        <TextView
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/titleresep"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/toolbar_bg_bottom_20dp"
             android:fontFamily="@font/last"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="24dp"
             android:text="FREELANCE CONTENT WRITING."
-            android:textSize="33sp"
-            android:textStyle="bold"
-            android:textColor="#000000"
-            android:layout_marginBottom="15dp">
-        </TextView>
+            android:textColor="#ffffff"
+            android:textSize="28sp"
+            android:textStyle="bold" />
 
 
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/sc"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <View
-                android:background="#CCCC00"
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginBottom="2dp">
-            </View>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
-            <TextView
-            android:textColor="#696969"
-            android:layout_marginTop="15dp"
-            android:textSize="20sp"
-            android:text="HEllo"
-            android:fontFamily="@font/fteo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/bahan"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-                android:layout_marginBottom="25dp">
+                <TextView
+                    android:id="@+id/bahan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/fteo"
+                    android:text="HEllo"
+                    android:paddingBottom="70dp"
+                    android:textColor="@color/colorLightGray"
+                    android:textSize="20sp" />
 
-        </TextView>
-
-
-        </LinearLayout>
-
-
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
     </LinearLayout>
-    </ScrollView>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        android:text="ADD Question"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
-        android:layout_marginBottom="5dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
 
 
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/bottomAdView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_id"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
