--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:layout_margin="10dp">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/toolBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/toolbar_bg_bottom_20dp"
+        android:fontFamily="@font/ffive"
+        android:elevation="20dp"
+        android:gravity="center_horizontal"
+        android:paddingVertical="20dp"
+        android:text="@string/app_name"
+        android:textColor="#ffffff"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/rc"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="-20dp"
+        android:clipToPadding="false"
+        android:paddingVertical="24dp"
+        app:layout_constraintBottom_toTopOf="@id/bottomBar"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_marginBottom="65dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolBar" />
 
-    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:id="@+id/bottomBar"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:orientation="vertical">
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal"
+        android:paddingVertical="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <View
-            android:background="#CCCC00"
-            android:layout_marginBottom="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="2dp">
-        </View>
-
-        <LinearLayout
-            android:layout_gravity="center"
-            android:orientation="horizontal"
+        <ImageView
+            android:id="@+id/share"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_share" />
 
-            <ImageView
-                android:id="@+id/share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_share">
-            </ImageView>
+        <ImageView
+            android:id="@+id/rateMe"
+            android:layout_width="wrap_content"
 
-            <ImageView
-                android:layout_marginLeft="55dp"
-                android:layout_marginRight="55dp"
-                android:id="@+id/rateMe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star">
-            </ImageView>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_star" />
 
-            <ImageView
-                android:id="@+id/buttonShowCustomDialog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_info">
+        <ImageView
+            android:id="@+id/buttonShowCustomDialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_info" />
 
-            </ImageView>
-        </LinearLayout>
-
-
-        <View
-            android:background="#CCCC00"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="3dp"
-            android:layout_width="match_parent"
-            android:layout_height="2dp">
-        </View>
     </LinearLayout>
 
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
