--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#448AFF</color>
+    <color name="colorPrimary">#11212d</color>
+    <color name="colorPrimaryDark">#06141b</color>
+    <color name="colorAccent">#253745</color>
+    <color name="colorLightGray">#4a5c6a</color>
+    <color name="colorWhite">#9ba8ab</color>
 </resources>
